# chatgpt-docstrings

./: .flake8  .gitignore  .gitlint  .pre-commit-config.yaml  .vscodeignore  CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  webpack.config.js
.github/workflows/: ci.yml
bundled/lsp_server/: _debug.py  _start.py  commands.py  completions.py  custom_types.py  initialize.py  jsonrpc.py  log.py  notification.py  progress.py  server.py  settings.py  shutdown.py
bundled/lsp_server/utils/: code_cleaner.py  code_parser.py  docstring.py  proxy.py  utils.py
bundled/tool/: _debug_server.py  code_cleaner.py  code_parser.py  lsp_custom_types.py  lsp_jsonrpc.py  lsp_progress.py  lsp_runner.py  lsp_server.py
fake-jiter/: README  jiter-0.4.0-py3-none-any.whl
language_server/: _debug.py  _start.py  commands.py  completions.py  initialize.py  server.py  settings.py
language_server/utils/: __init__.py  code_cleaners.py  docstring.py  proxy.py  utils.py
language_server/utils/code_analyzers/: __init__.py  ast_analyzer.py  base.py  factory.py  jedi_analyzer.py
src/: extension.ts
src/common/: api-key.ts  constants.ts  generate-docstring.ts  logging.ts  openai-api-key.ts  python.ts  server.ts  settings.ts  status.ts  telemetry.ts  utilities.ts  vscodeapi.ts
src/test/python_tests/: requirements.txt
src/test/python_tests/lsp_test_client/: session.py
tests/: test_code_analyzers.py  test_language_server.py  test_parse_docstring.py  test_proxy_validation.py
tests/asserts/: workspace_file_sample.py
